--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "express": "^4.16.3",
+    "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.13.2",
-    "react-bootstrap": "^1.6.1"
+    "react-bootstrap": "^1.6.1",
+    "react-router-dom": "^5.2.0"
   }
 }
